--- a/src/app/modules/dashboard/pages/product-details/product-details.component.html
+++ b/src/app/modules/dashboard/pages/product-details/product-details.component.html
@@ -69,6 +69,7 @@
 
       <ng-template #edit>
         <button class='btn btn-primary mt-[28px]' (click)='editOffer(offerByIdData)'>Редактировать</button>
+        <button class='btn btn-outline-primary mt-[12px]' (click)='deleteOffer(offerByIdData.id)'>Удалить облявление</button>
       </ng-template>
 
       <div class='w-full rounded-[12px] flex bg-primary-100 items-center mt-[32px]'>
