--- a/src/app/modules/dashboard/components/create/create.component.html
+++ b/src/app/modules/dashboard/components/create/create.component.html
@@ -65,7 +65,7 @@
         formControlName='city_id'
         placeholder='Местонахождение'
         icon='icon-location'
-        [items]='regions'
+        [items]='cities'
       ></app-custom-select>
     </div>
 
