--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
       <span class='icon icon-message-icon'></span>
       <ion-label class='text-[10px] leading-[12px] text-gray'>Сообщения</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab='profile'>
+    <ion-tab-button routerLink='/profile'>
       <span class='icon icon-user'></span>
       <ion-label class='text-[10px] leading-[12px] text-gray'>Профиль</ion-label>
     </ion-tab-button>
