--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -1,8 +1,9 @@
 <div
-  class='flex items-center pb-[16px] border-b-[1px] border-b-gray input'
+  class='flex items-center pb-[10px] border-b-[1px] border-b-gray-50 input'
 >
   <span *ngIf='icon' class='icon {{ icon }} mr-[13px] input-icon w-[20px] h-[20px]'></span>
   <input
+    [inputMask]='inputMask'
     [type]='type'
     class='outline-none border-none w-full placeholder:text-gray-100 input-content'
     [value]='value'
