--- a/src/app/modules/dashboard/components/card-item/card-item.component.html
+++ b/src/app/modules/dashboard/components/card-item/card-item.component.html
@@ -10,7 +10,7 @@
           [class.icon-heart-full]='favouriteService.isFavourite(offer.id)'
           (click)='addOrRemove($event, offer)'
     ></span>
-    <img *ngIf='offer?.image; else noImage' class='card-img rounded-t-[8px] w-full h-[130px]'
+    <img *ngIf='offer?.image; else noImage' class='card-img rounded-t-[8px] w-full h-[130px] object-contain'
          [src]="'https://plastic-market-app.ru/img/' + offer.image[0]" alt=''>
 
     <ng-template #noImage>
