--- a/src/app/modules/dashboard/components/create/create.component.html
+++ b/src/app/modules/dashboard/components/create/create.component.html
@@ -57,7 +57,8 @@
 
         <span class='icon icon-description absolute top-0 left-0 z-10 w-[20px] h-[20px]'></span>
       </div>
-      <div class='text-[12px] leading-[17px] text-gray-600 mt-[3px]'>{{ form.get('description')?.value?.length }}/8000</div>
+      <div class='text-[12px] leading-[17px] text-gray-600 mt-[3px]'>{{ form.get('description')?.value?.length }}/8000
+      </div>
     </div>
 
     <div class='mb-[18px]'>
@@ -113,9 +114,10 @@
     </div>
 
 
-    <button [disabled]='loading || form.invalid' class='btn btn-primary mt-[26px] flex items-center justify-center' (click)='onSubmit()'>
+    <button [disabled]='loading || form.invalid'
+            class='btn btn-primary mt-[26px] flex items-center justify-center' (click)='onSubmit()'>
       {{ offer?.id ? 'Сохранить' : 'Опубликовать' }}
-      <ion-spinner color="light" class='ml-[8px] h-[20px]' *ngIf='loading'></ion-spinner>
+      <ion-spinner color='light' class='ml-[8px] h-[20px]' *ngIf='loading'></ion-spinner>
     </button>
   </form>
 </ion-content>
