--- a/src/app/modules/dashboard/pages/product-details/product-details.component.html
+++ b/src/app/modules/dashboard/pages/product-details/product-details.component.html
@@ -42,9 +42,7 @@
       <div class='mt-[22px] flex items-start' *ngIf='offerByIdData?.user'>
         <div class='relative'>
           <img class='min-w-[27px] w-[27px] h-[27px] rounded-full'
-               [src]='offerByIdData.user.image
-                ?  offerByIdData.user.image
-                : "./assets/img/no-avatar.webp"' alt=''>
+               [src]="'https://plastic-market-app.ru/img/' + offerByIdData.user.photo" alt='' (error)='errorAvatar($event)'>
           <!--          <span class='absolute top-0 right-0 w-[7px] h-[7px] rounded-full bg-primary z-10'></span>-->
         </div>
         <div>
@@ -75,7 +73,7 @@
       <div class='w-full rounded-[12px] flex bg-primary-100 items-center mt-[32px]'>
         <div
           *ngFor="let i of ['Описание', 'Доставка и оплата']; let idx = index"
-          class='text-[14px] leading-[18px] font-semibold rounded-[12px] px-[15px] py-[13px] transition-all	text-gray-700'
+          class='flex-1 text-center text-[14px] leading-[18px] font-semibold rounded-[12px] px-[15px] py-[13px] transition-all	text-gray-700'
           [class.w-full]='idx === 1'
           [class.active]='active === idx' (click)='active = idx'>{{i}}</div>
       </div>
