--- a/src/app/modules/profile/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/profile/pages/profile-page/profile-page.component.html
@@ -1,6 +1,6 @@
 <div class='p-[22px] h-full bg-white' *ngIf='currentUser'>
   <img class='w-[80px] h-[80px] rounded-full mt-[10px]'
-       [src]='currentUser.photo'
+       [src]="'https://plastic-market-app.ru/img/' + currentUser.photo"
        (error)="errorAvatar($event)"
        alt=''>
   <div class='mt-[20px] mb-[10px] text-[30px] leading-[30px] font-medium'>{{ currentUser.name  }}</div>
