--- a/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -37,8 +37,8 @@
       </span>
     </div>
 
-    <p class='text-[12px] leading-[17px] text-primary text-right mt-[15px]'>
-      Забыли пароль ?
+    <p class='text-[12px] leading-[17px] text-primary text-right mt-[15px]' routerLink='/auth/forgot-password'>
+      Забыли пароль?
     </p>
 
     <button class='btn btn-primary mt-[48px] flex items-center justify-center'
