--- a/src/app/modules/dashboard/components/create/create.component.html
+++ b/src/app/modules/dashboard/components/create/create.component.html
@@ -28,7 +28,7 @@
       <app-custom-select
         icon='icon-category'
         [items]='subCategories'
-        placeholder='Под категория'
+        placeholder='Подкатегории'
         formControlName='subcategory_id'
       ></app-custom-select>
     </div>
@@ -36,7 +36,7 @@
     <div class='mb-[18px] border-b-[1px] border-gray-50 pb-[12px]'>
       <div class='flex items-center'>
         <span class='icon icon-instagram w-[18px] h-[18px]'></span>
-        <span class='flex-1 ml-[15px] text-[16px] leading-[17px] text-gray-600'>Фото</span>
+        <span class='flex-1 ml-[15px] text-[16px] leading-[17px] text-gray'>Фото</span>
       </div>
 
       <div class='flex flex-wrap mx-[-4px] pt-[14px] mb-[18px]'>
@@ -58,6 +58,16 @@
         <span class='icon icon-description absolute top-0 left-0 z-10 w-[20px] h-[20px]'></span>
       </div>
       <div class='text-[12px] leading-[17px] text-gray-600 mt-[3px]'>{{ form.get('description')?.value?.length }}/8000
+      </div>
+    </div>
+
+    <div class='mb-[18px]'>
+      <div class='relative border-b-[1px] border-gray-50 pb-[16px]'>
+        <ion-textarea formControlName='delivery' class='custom-textarea' placeholder='Доставка и оплата'></ion-textarea>
+
+        <span class='icon icon-description absolute top-0 left-0 z-10 w-[20px] h-[20px]'></span>
+      </div>
+      <div class='text-[12px] leading-[17px] text-gray-600 mt-[3px]'>{{ form.get('delivery')?.value?.length }}/8000
       </div>
     </div>
 
