--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -34,7 +34,7 @@
 
       <div class='mb-[22px]'>
         <app-custom-select
-          label='Под категория'
+          label='Подкатегории'
           formControlName='subcategory_id'
           [items]="subCategories">
         </app-custom-select>
