--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -6,7 +6,7 @@
   <input
     [type]='type'
     [inputMask]='mask'
-    class='outline-none border-none w-full placeholder:text-gray-100 input-content'
+    class='outline-none border-none w-full input-content'
     [value]='value'
     [placeholder]="placeholder || ''"
     [attr.disabled]='isDisabled ? true : null'
