--- a/src/app/modules/dashboard/components/card-item/card-item.component.html
+++ b/src/app/modules/dashboard/components/card-item/card-item.component.html
@@ -10,7 +10,10 @@
           [class.icon-heart-full]='favouriteService.isFavourite(offer.id)'
           (click)='addOrRemove($event, offer)'
     ></span>
-    <img *ngIf='offer?.image; else noImage' class='card-img rounded-t-[8px] w-full h-[130px] object-contain'
+    <img style='display: block;
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;' *ngIf='offer?.image; else noImage' class='card-img rounded-t-[8px] w-full h-[130px] object-contain'
          [src]="'https://plastic-market-app.ru/img/' + offer.image[0]" alt=''>
 
     <ng-template #noImage>
@@ -19,13 +22,14 @@
   </div>
 
   <div class='py-[7px] px-[12px]' *ngIf='offer'>
-    <p class='font-medium	text-gray-strong text-[12px] leading-[14px]'>{{ offer.name }}</p>
+    <p
+       class='line-clamp-2 font-medium	text-gray-strong text-[12px] leading-[14px] h-[28px]'>{{ offer?.name }}</p>
     <div class='flex items-center mt-[5px]'>
       <span class='text-[14px] leading-[17px] font-semibold text-primary mr-[8px]'>{{ offer.amount + ' руб' }}</span>
       <span class='text-[10px] leading-[12px] text-gray-strong line-through' *ngIf='false'>$25</span>
     </div>
     <div class='flex items-center justify-between'>
-      <p class='text-[12px] leading-[14px] font-medium text-gray'>{{ offer.city.name }}</p>
+      <p class='text-[12px] leading-[14px] font-medium text-gray'>{{ offer?.city?.name }}</p>
       <span class='flex items-center'>
       <span class='icon icon-user w-[9px] bg-gray'></span>
       <span
